Another attempt to fix tablet spacing bug, adjusting 'margin-top' and 'top' in 'style.css'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,18 @@ body {
 
 @media (max-width: 767.98px) { 
     #game {
+        top: .5rem;
         position: relative;
-        margin-top: .75rem;
+        margin-top: .5rem;
         top: 5rem;
     }
 }
 
 @media (max-width: 575.98px) {
     #game {
+        top: .5rem;
         position: relative;
-        margin-top: .75rem;
+        margin-top: .5rem;
         top: 10rem;
     }
 }
